Fix last line being cut off in editor in Blink-based browsers
Fix issue of last line of code (when bottom of window is reached)
being cut off on Chrome and other Blink-based browsers.

--- a/frontend/public/css/codemirror.css
+++ b/frontend/public/css/codemirror.css
@@ -163,7 +163,10 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: #a22;}
   /* 50px is the magic margin used to hide the element's real scrollbars */
   /* See overflow: hidden in .CodeMirror */
   margin-bottom: -50px; margin-right: -50px;
-  padding-bottom: 50px;
+  /* Fix issue of last line of code (when bottom of window is
+  reached) being cut off on Chrome and other Blink-based browsers
+  (changed from original value of 50px) */
+  padding-bottom: 45px;
   height: 100%;
   outline: none; /* Prevent dragging from highlighting the element */
   position: relative;
